css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Recursive', sans-serif;
}
#submit-1{
    background-color: #C1876B;
    width: 30%;
    height: 50px;
    border-radius: 8px;
    border: none;
    color: #fff;
    font-size: large;
    position: relative;
    left: 12.5%;

}
.qn{
    height: 300px;
    margin: 20px;
    margin-left: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 75%;
    position: relative;
    left: 12.5%;
    box-shadow: 0 2px 5px gray;
    padding: 5%;
}
.qn:hover{
    height: 350px;
    box-shadow: 0 4px 6px rgb(102, 98, 98);
    width: 80%;
    left: 10%;
}
header{
    font-size: xx-large;
    font-weight: 800;
    text-align: center;
}
.questions{
    width: 50%;
    position: relative;
    left: 25%;

}
body{
    background-color: #A5A5A5;
}

